# simplicio-tasks

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  INSTALL.md  MANIFEST.in  PRICING.md  PYPI.md  README.md  llms.txt  pyproject.toml  simplicio-loop.project.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/simplicio-learn/: SKILL.md
.claude/skills/simplicio-loop/: SKILL.md
.claude/skills/simplicio-tasks/: SKILL.md
.claude/skills/simplicio-tasks/references/: extension-points.md  orchestration.md  quality-safety-delivery.md  token-capture.md  understand-anything-adapter.md  web-evidence.md
.codex/: config.toml  hooks.json
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml
.simplicio/: architecture-inventory.json  call-graph.json  index-state.json  precedent-index.json  project-map.json  symbol-index.json
.simplicio/cache/: cache.db
.simplicio/ledger/: savings-events.jsonl
READMEs/: README.ar-SA.md  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.hi-IN.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.nl-NL.md  README.pl-PL.md  README.pt-BR.md  README.ru-RU.md  README.tr-TR.md  README.zh-CN.md
adapters/: MATRIX.md
adapters/antigravity/: README.md
adapters/claude/: README.md
adapters/codex/: README.md
adapters/cursor/: README.md
adapters/hermes/: README.md
adapters/kiro/: README.md
adapters/opencode/: README.md
adapters/vscode/: README.md
app/: simplicio_tray.py
engine/: README.md  simplicio_audit.py  simplicio_capture.py  simplicio_cli.py  simplicio_compress.py  simplicio_copilot.py  simplicio_detect.py  simplicio_engine.py  simplicio_evals.py  simplicio_image.py  simplicio_init.py  simplicio_kompress.py  simplicio_mcp.py  simplicio_memory.py  simplicio_rag.py  simplicio_semantic.py  simplicio_semantic_ml.py  simplicio_signatures.py  simplicio_tokens.py
hooks/: README.md  headroom_dashboard.py  hooks.claude.json  loop_stop.py  orient_rewrite.py  simplicio_dashboard.py
packaging/npm/: README.md  package.json
packaging/npm/lib/: python-shim.js
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: loop_stop.py
plugin/skills/simplicio-loop/: SKILL.md
plugin/skills/simplicio-review/: SKILL.md
plugin/skills/simplicio-tasks/: SKILL.md
plugin/tests/: test_cross_agent_wiki.py  test_loop_e2e.py
rust/: Cargo.toml  LICENSE  NOTICE  NOTICE.upstream
rust/simplicio-core/: Cargo.toml
rust/simplicio-core/benches/: auth_mode.rs  ccr_store.rs  tokenizer.rs
rust/simplicio-core/config/: pipeline.toml
rust/simplicio-core/proptest-regressions/transforms/: tag_protector.txt
rust/simplicio-core/src/: auth_mode.rs  cache_control.rs  compression_policy.rs  lib.rs
rust/simplicio-core/src/ccr/: mod.rs
rust/simplicio-core/src/ccr/backends/: in_memory.rs  mod.rs  redis.rs  sqlite.rs
rust/simplicio-core/src/relevance/: base.rs  bm25.rs  embedding.rs  hybrid.rs  mod.rs
rust/simplicio-core/src/signals/: README.md  keyword_detector.rs  line_importance.rs  mod.rs  tiered.rs
rust/simplicio-core/src/tokenizer/: estimator.rs  hf_impl.rs  mod.rs  registry.rs  tiktoken_impl.rs
rust/simplicio-core/src/transforms/: adaptive_sizer.rs  anchor_selector.rs  content_detector.rs  detection.rs  diff_compressor.rs  live_zone.rs  log_compressor.rs  magika_detector.rs  mod.rs  recommendations.rs  safety.rs  search_compressor.rs  tag_protector.rs  unidiff_detector.rs
rust/simplicio-core/src/transforms/pipeline/: config.rs  mod.rs  orchestrator.rs  traits.rs
rust/simplicio-core/src/transforms/pipeline/offloads/: diff_noise.rs  diff_offload.rs  json_offload.rs  log_offload.rs  mod.rs  search_offload.rs
rust/simplicio-core/src/transforms/pipeline/reformats/: json_minifier.rs  log_template.rs  mod.rs
rust/simplicio-core/src/transforms/smart_crusher/: analyzer.rs  anchors.rs  builder.rs  classifier.rs  config.rs  constraints.rs  crusher.rs  crushers.rs  error_keywords.rs  field_detect.rs  hashing.rs  mod.rs  observer.rs  orchestration.rs  outliers.rs  planning.rs  statistics.rs  stats_math.rs  traits.rs  types.rs
rust/simplicio-core/src/transforms/smart_crusher/compaction/: classifier.rs  compactor.rs  formatter.rs  ir.rs  mod.rs  walker.rs
rust/simplicio-core/src/transforms/text_crusher/: config.rs  crusher.rs  mod.rs
rust/simplicio-core/tests/: auth_mode.rs  cache_control.rs  ccr_backends.rs  ccr_roundtrip.rs  live_zone_ccr.rs  live_zone_dispatch.rs  live_zone_thresholds.rs  live_zone_token_validation.rs  recommendations_loader.rs  tokenizer_proptest.rs
rust/simplicio-py/: Cargo.toml  build.rs  glibc_compat.c  pyproject.toml
rust/simplicio-py/python/simplicio/: __init__.py
rust/simplicio-py/src/: lib.rs
scripts/: agentsview_adapter.py  az_boards_adapter.py  billing_aggregator.py  check.py  claims_audit.py  cross_agent_wiki.py  doctor.py  flow_audit.py  handoff.py  hierarchical_planner.py  impact_audit.py  install_lib.py  install_services.py  loop_journal.py  pr_evidence.py  savings_harness.py  setup_headroom.sh  setup_simplicio.sh  simplicio-capture.sh  simplicio-economy.sh  simplicio-engine  sync_plugin.py  task_anchor.py  update.sh  video_evidence.py
simplicio_loop/: __init__.py  cli.py
simplicio_loop/_bundle/hooks/: README.md  action_gate.py  hooks.claude.json  hooks.json  learn_stop.py  loop_capture.py  loop_stop.py  orient_clamp.py  orient_rewrite.py  simplicio_dashboard.py  simplicio_watch.py
simplicio_loop/_bundle/scripts/: cross_agent_wiki.py
simplicio_loop/_bundle/tests/: _selfrun.py
tests/: test_action_gate.py  test_cross_agent_wiki.py  test_flow_audit.py  test_hierarchical_planner.py  test_impact_audit.py  test_loop_e2e.py  test_worker_selftests.py  test_worker_smoke.py
video/: README.md  build_audio.py  build_composition.py  build_srt.py  render.sh  storyboard.master.json
video/hyperframes/en/: index.html
video/hyperframes/es/: index.html
video/hyperframes/pt-BR/: index.html
video/hyperframes/zh-CN/: index.html
video/lang/: en.json  en.srt  es.json  es.srt  pt-BR.json  pt-BR.srt  zh-CN.json  zh-CN.srt
(+23 files in other folders)
