[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicio-loop"
version = "1.0.3"
description = "The Universal Looping AI Orchestrator — a runtime-agnostic super-plugin (6 skills) that drains any queue of work end-to-end on any LLM/runtime."
readme = "PYPI.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
keywords = ["ai", "agent", "orchestrator", "llm", "claude", "cursor", "automation", "ralph-loop", "token-economy", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wesleysimplicio/simplicio-loop"
Repository = "https://github.com/wesleysimplicio/simplicio-loop"
Issues = "https://github.com/wesleysimplicio/simplicio-loop/issues"

[project.scripts]
simplicio-loop = "simplicio_loop.cli:main"

[tool.setuptools]
packages = ["simplicio_loop"]
include-package-data = true

[tool.setuptools.package-data]
simplicio_loop = ["_bundle/**/*"]
