[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicio-loop"
version = "3.12.0"
description = "The Universal Looping AI Orchestrator — a runtime-agnostic super-plugin (6 skills) that drains any queue of work end-to-end on any LLM/runtime."
readme = "PYPI.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
keywords = ["ai", "agent", "orchestrator", "llm", "claude", "cursor", "automation", "ralph-loop", "token-economy", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]
# The simplicio-loop drive REQUIRES two operators (see .claude/skills/simplicio-loop/SKILL.md):
#   simplicio-mapper -> the repo-survey step (binds `orient`)
#   simplicio-cli    -> the operator that applies+verifies changes (binds `execute`/`deterministic_edit`)
dependencies = [
  "simplicio-mapper",
  "simplicio-cli",
]

# Optional: the real embedding backend for `simplicio-cli semantic --ml` / `simplicio-cli rag --ml`.
# The native engine itself is stdlib-only; this only enables embedding-based semantic dedup +
# meaning retrieval. `pip install "simplicio-loop[ml]"`.
[project.optional-dependencies]
# Dev/test: the suite ALSO self-runs on bare python3 (`python3 scripts/check.py`), so pytest is
# only a convenience for nicer output / IDE integration — never required.
dev = ["pytest>=7"]
ml = ["model2vec>=0.3", "numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/wesleysimplicio/simplicio-loop"
Repository = "https://github.com/wesleysimplicio/simplicio-loop"
Issues = "https://github.com/wesleysimplicio/simplicio-loop/issues"

[project.scripts]
simplicio-loop = "simplicio_loop.cli:main"

[tool.setuptools]
packages = ["simplicio_loop"]
include-package-data = true

[tool.setuptools.package-data]
simplicio_loop = ["_bundle/**/*"]
