[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "simplicio-core"
version = "0.1.0"
description = "Simplicio native Rust performance layer (PyO3). Vendored + rebranded from headroom (Apache-2.0)."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Simplicio Maintainers" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
# Pure-Python package lives under python/; the compiled cdylib (Cargo [lib]
# name = "_core") is placed inside it as `simplicio._core`.
python-source = "python"
module-name = "simplicio._core"
# abi3 wheel (stable ABI) — pyo3 abi3-py310 feature is set in the workspace dep.
features = ["pyo3/extension-module"]
